--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "reka-ui": "^2.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.24"
   },
   "devDependencies": {
