--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "^4.1.17",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.24",
+    "vue-sonner": "^2.0.9",
     "zod": "^4.1.12"
   },
   "devDependencies": {
