--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@tailwindcss/vite": "^4.1.17",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^14.0.0",
@@ -20,6 +21,7 @@
     "tailwindcss": "^4.1.17",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.24",
+    "vue-draggable-plus": "^0.6.0",
     "vue-sonner": "^2.0.9",
     "zod": "^4.1.12"
   },
