--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
+    "@internationalized/date": "^3.10.0",
     "@tailwindcss/vite": "^4.1.17",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^14.0.0",
