--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "vee-validate": "^4.15.1",
+    "view-transition-highlight": "^0.0.2",
     "vue": "^3.5.24",
     "vue-draggable-plus": "^0.6.0",
     "vue-sonner": "^2.0.9",
